--- a/PI-Pokemon-main/api/package.json
+++ b/PI-Pokemon-main/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test": "jest --verbose --detectOpenHandles"
   },
   "author": "Henry",
   "license": "ISC",
@@ -24,13 +24,15 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "supertest-as-promised": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "jest": "^28.1.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "supertest": "^6.0.1",
+    "supertest": "^6.2.3",
     "supertest-session": "^4.1.0"
   }
 }
