--- a/PI-Pokemon-main/client/package.json
+++ b/PI-Pokemon-main/client/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.27.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.51.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -34,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "jest": "^26.6.0",
+    "nock": "^13.2.4",
+    "redux-mock-store": "^1.5.4"
   }
 }
