--- a/PI-Pokemon-main/client/package.json
+++ b/PI-Pokemon-main/client/package.json
@@ -15,7 +15,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
     "sass": "^1.51.0",
-    "jest": "^26.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -45,6 +44,7 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "nock": "^13.2.4",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "jest": "^26.6.3"
   }
 }
