--- a/PI-Pokemon-main/client/package.json
+++ b/PI-Pokemon-main/client/package.json
@@ -44,7 +44,6 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "nock": "^13.2.4",
-    "redux-mock-store": "^1.5.4",
-    "jest": "^26.6.3"
+    "redux-mock-store": "^1.5.4"
   }
 }
